[package]
name = "rayzo"
version = "0.1.0"
authors = ["Adamaq01 <adamthibert01@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple Rust networking library meant for video games"
readme = "README.md"
repository = "https://github.com/Adamaq01/rayzo"
keywords = [ "game", "networking", "laminar" ]
categories = [ "game-development" ]

[dependencies]
serde = { version = "^1.0.0", features = ["derive"] }
serde-diff = "^0.3.0"
bincode = "^1.3.0"
rmp-serde = { git = "https://github.com/3Hren/msgpack-rust" } # "^0.15.0"
downcast-rs = "^1.2.0"
laminar = { version = "^0.4.0", optional = true }

[dev-dependencies]
laminar = { version = "^0.4.0" }
rayzo = { path = "./", features = ["laminar"] }
